--- a/projects/portfolio/frontend/package.json
+++ b/projects/portfolio/frontend/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "portfolio-frontend",
+  "name": "portfolio-dark",
   "version": "1.0.0",
   "private": true,
-  "description": "React frontend for a dark-themed portfolio",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "description": "Dark portfolio frontend with embedded contact form",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 3000"
+    "start": "echo 'No local server configured; use Flask backend to serve frontend at /' && node -v || true"
   },
-  "keywords": ["portfolio","frontend","react"],
-  "license": "MIT"
+  "dependencies": {
+    "live-server": "1.2.2"
+  }
 }
