fix: Add litellm support and fix model configuration
- Add litellm to requirements.txt for LiteLLM model support
- Change default brain model from gpt-5-nano to gpt-4o-mini (gpt-5-nano doesn't exist)
- Update goal_interpreter to use gpt-4o-mini instead of gpt-5-nano
- Add virtual environment support in runtime.py to use venv Python when available
- Fix Flask backend to serve frontend from correct relative path
- Add .symphony.json config for portfolio project with explicit start commands
- Update documentation with troubleshooting steps

These changes fix ModuleNotFoundError for litellm and ensure Symphony
can properly run with valid OpenAI model names.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Core dependencies for Symphony-Lite
 typer==0.9.0
+click>=8.1.0,<8.2.0  # Pin click to 8.1.x - typer 0.9.0 has issues with click 8.3.0+
 rich>=13.9.4,<14.0.0
 smolagents>=0.2.0
+litellm>=1.0.0  # Required for LiteLLM model support in smolagents
 openai>=1.0.0
 python-dotenv>=1.0.0
 
