--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies for Symphony-Lite
+# IMPORTANT: Requires Python 3.10 or higher (smolagents dependency)
 typer==0.9.0
-click>=8.1.0,<8.2.0  # Pin click to 8.1.x - typer 0.9.0 has issues with click 8.3.0+
+click>=8.1.0,<8.2.0
 rich>=13.9.4,<14.0.0
 smolagents>=0.2.0
 litellm>=1.0.0  # Required for LiteLLM model support in smolagents
